--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <Table id="tableC" class="table-bordered m-auto p-2"></Table>
         <hr>
     </div>
+
+    <div  style="border-radius: 10px;    background-color: rgba(216, 222, 228, 0.915);">
+        <h1 class="text-center fw-bold">Forecast Weather</h1>
+        <div id="forecastTbl" class="row text-center" ></div>
+    </div>
     <script src="app.js"></script>
 </body>
 
