--- a/index.html
+++ b/index.html
@@ -4,40 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather app</title>
+    <title>Weather Earth</title>
+
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
+
+    <!-- link css -->
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 
-<body style="background-color: black;">
-    <video class="video" autoplay loop src="video/background.mp4"></video>
-    <div class="topBar">
-        <input id="txtSearch" type="text" placeholder="location">
-        <input onclick="currentWeather()" type="button" value="Search">
-    </div>
+<body>
 
-    <div class=" topRightBar">
-        <div class="row">
-            <button class="btn">-</button>
+    <!-- nav bar-->
+    <nav>
+        <div class="nav_input">
+            <input id="txtInput"  type="text" value="">
+            <input id="btnInput"  type="button" value="Search City">
         </div>
+        <div style="background-color: rgba(0,0,0,0.2); width: 40px; text-align: center;">
+            <label id="" style="position: relative; top: 8px;"><img width="20px" src="icon/light.png" alt=""></label>
+        </div>
+    </nav>
+
+    <!-- animation background-->
+    <div class="hero">
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+    </div>
+
+    <!-- welcome box -->
+    <div class="welcome_box">
+        <p style="margin-left: 15px; padding-top: 5px;"><img style="vertical-align: middle;" src="icon/resalt.svg" alt=""> Resalt for</p>
+        <label id="Welcome_lbl">Thellambura</label>
+        <h1 id="Welcome_time">12:10:21</h1>
+    </div>
+
+    <!-- welcome box -->
+    <div>
 
     </div>
 
-    <div class="currentBar">
-        <h1 id="lo_name">Default</h1>
-        <h5 id="lo_region">default</h5>
-        <h2 id="lo_imgTxt">Default</h2>
-        <img id="lo_img" src="" alt="" width="100px">
-        <h5 id="lo_tempc">default</h5>
-        <Table id="tableC" class="table-bordered m-auto p-2"></Table>
-        <hr>
-    </div>
 
-    <div  style="border-radius: 10px;    background-color: rgba(216, 222, 228, 0.915);">
-        <h1 class="text-center fw-bold">Forecast Weather</h1>
-        <div id="forecastTbl" class="row text-center" ></div>
-    </div>
+    <!-- link js -->
     <script src="app.js"></script>
 </body>
 
