--- a/index.html
+++ b/index.html
@@ -46,9 +46,88 @@
         <h1 id="Welcome_time">12:10:21</h1>
     </div>
 
-    <!-- welcome box -->
-    <div>
+    <!-- live weather box -->
+    <div class="live_box">
+        <label class="live_hed">Current Weather</label>
+        <div class="live_box_1">
 
+        </div>
+        <label style="position: relative; top: 10px; left: 10px;  color: #2c3e50; font-size: 25px; font-weight: 700; ">Forecast</label>
+        <div class="day_box">
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            <div class="day">
+
+            </div>
+            
+        </div>
     </div>
 
 
