time update sucsses

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="welcome_box">
         <p style="margin-left: 15px; padding-top: 5px;"><img style="vertical-align: middle;" src="icon/resalt.svg" alt=""> Resalt for</p>
         <label id="Welcome_lbl">Thellambura</label>
-        <h1 id="Welcome_time">12:10:21</h1>
+        <h1 id="Welcome_time"></h1>
     </div>
 
     <!-- live weather box -->
